# diana_soccer

base_module_soc/: CMakeLists.txt  package.xml
base_module_soc/include/base_module_soc/: base_module_soc.h  base_module_soc_state.h
base_module_soc/src/: base_module_soc.cpp  base_module_soc_state.cpp
diana_manager/: CMakeLists.txt  package.xml
diana_manager/launch/: diana_main_manager.launch  diana_main_manager_gazebo.launch
diana_manager/src/: diana_main_manager.cpp
heroehs_math/: package.xml
walking_module/: CMakeLists.txt  package.xml
walking_module/include/walking_module/: walking_module.h
walking_module/src/: walking_module.cpp  walking_module_state.cpp
